Adds Grid in Styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 to bring affordable and healthy meals to as many people as possible." /> 
 
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
+    <!-- /* <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />  -->
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css" />
     <link rel="stylesheet" type="text/css" href="resources/css/Style.css" />
